k8s/network-policies/01-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: inventario-seguro
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
