k8s/network-policies/02-allow-external-to-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-web
  namespace: inventario-seguro
spec:
  podSelector:
    matchLabels:
      app: inventario-web
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 5000
