k8s/network-policies/03-allow-web-to-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-mongo
  namespace: inventario-seguro
spec:
  podSelector:
    matchLabels:
      app: inventario-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: inventario-web
      ports:
        - protocol: TCP
          port: 27017
